# data_binify

./: CMakeLists.txt  README.md
.github/workflows/: push_test.yml
include/binify/: binify.h
include/data_binify/: binify.h  writehelper.hpp
src/: ast.h  binify.cpp  binify.h  lexer.l  parser.cpp  parser.cxx  parser.hpp  parser.hxx  parser.y  scanner.cpp  scanner.cxx  scanner.h  scanner.hpp  scanner.hxx  win_make_parser.bat  writehelper.cpp
tests/: runner.cpp  test_binify.cpp  test_writehelper.cpp
